--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "fs": "^0.0.1-security",
+    "piexifjs": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
